# Generative-AI

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
